# saje_clan_gunshot_detector_api

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py  utils.py
app/model/: gunshotPredictor.py
