[tool.poetry]
name = "sajeclan-gunshot-detection-api"
version = "0.1.0"
description = ""
authors = ["Adehwam21 <drewaaron96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
joblib = "1.3.2"
python-telegram-bot = "^21.5"
requests = "2.31.0"
torch = "1.13.1"
opensoundscape = "0.6.0"
pandas = ">=1.0.3,<2.0.0"
fastapi = "^0.114.1"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
torchvision = "0.14.1"
python-multipart = "0.0.6"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
